# bresize2fs

./: Cargo.toml  README
src/: analyzer.rs  cli.rs  device.rs  main.rs
src/fs/: superblock.rs
src/worker/: mod.rs  non_optimized.rs  optimized.rs
