[package]
name = "bresize2fs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
bstr = "1.12.1"
byte-unit = "5.2.0"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
inquire = { version = "0.9.4", default-features = false, features = ["console", "date"] }
